--- a/src/ItemRenderers/PhotoListIGridItemRenderer.mxml
+++ b/src/ItemRenderers/PhotoListIGridItemRenderer.mxml
@@ -12,9 +12,11 @@
 	<fx:Script>
 		<![CDATA[
 			import VOs.PhotoVO;
+			
 			import com.squidzoo.eventSystem.EventCentral;
 			import com.squidzoo.eventSystem.events.CustomDataEvent;
 			import com.squidzoo.eventSystem.events.CustomEvent;
+			import com.squidzoo.imageUtils.ImageUtils;
 			
 			private var _data:PhotoVO;
 			
@@ -22,11 +24,13 @@
 				//trace("plir init()");
 			}
 			
+			/*
 			override public function set data(value:Object):void{
 				_data = (value as PhotoVO);
 				//trace("plir: "+_data.title);
-				photo.source = value.image;
+				photo.source = _data.image;
 			}
+			*/
 			
 			private function onClickImage():void{
 				//EventCentral.getInstance().dispatchEvent(new CustomDataEvent(CustomDataEvent.IMAGE_IN_LIST_CLICKED,null,null,null,null,_data));
@@ -35,7 +39,7 @@
 		]]>
 	</fx:Script>
 	
-	<s:Rect width="100" height="100"
+	<s:Rect width="120" height="120"
 			filters="{[graphicLib.getDropShadowFilter()]}">
 		<s:fill>
 			<s:LinearGradient rotation="90">
@@ -46,6 +50,7 @@
 	</s:Rect>
 	
 	<s:Image id="photo" enableLoadingState="true"
+			  source="{data.image}"
 				   maxWidth="180" maxHeight="150" verticalCenter="0" horizontalCenter="0" click="onClickImage()"/>
 	
 </s:ItemRenderer>
