--- a/src/ItemRenderers/SetListItemRenderer.mxml
+++ b/src/ItemRenderers/SetListItemRenderer.mxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009" 
-				xmlns:s="library://ns.adobe.com/flex/spark" height="100" width="100%">
+				xmlns:s="library://ns.adobe.com/flex/spark" height="100" width="100%" xmlns:components="components.*">
 	
 	<fx:Script>
 		<![CDATA[
@@ -8,13 +8,16 @@
 			[Embed(source="assets/images/greenArrowRight.png")]
 			[Bindable]
 			public var arrowImage:Class;
+			
 		]]>
 	</fx:Script>
-	
-	<s:SkinnableContainer skinClass="skins.SetListItemRendererSkin" width="100%" height="100%">		
-			<s:Label text="{data.title}" left="20" verticalCenter="0"/>
-			<s:Button skinClass="components.ArrowButtonSkin" right="20" verticalCenter="0"/>				
-	</s:SkinnableContainer>
-	
+	<s:VGroup>	
+		<s:SkinnableContainer skinClass="skins.SetListItemRendererSkin" width="100%" height="100%" >
+			<s:HGroup id="wrapper">			
+				<components:HTMLLabel id="textLabel" text="{data.title}" left="20" verticalCenter="0"/>
+			</s:HGroup>
+				<s:Button skinClass="components.ArrowButtonSkin" right="20" verticalCenter="0"/>				
+		</s:SkinnableContainer>
+	</s:VGroup>
 	
 </s:ItemRenderer>
