--- a/src/components/HTMLLabel.mxml
+++ b/src/components/HTMLLabel.mxml
@@ -10,6 +10,7 @@
 		<![CDATA[
 			import flashx.textLayout.conversion.TextConverter;
 			
+			[Bindable]
 			override public function set text(value:String):void {
 				super.textFlow = TextConverter.importToFlow(value, 
 					TextConverter.TEXT_FIELD_HTML_FORMAT);
