--- a/src/components/popups/MenuPopUp.mxml
+++ b/src/components/popups/MenuPopUp.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:SkinnablePopUpContainer xmlns:fx="http://ns.adobe.com/mxml/2009" 
 						   xmlns:s="library://ns.adobe.com/flex/spark"
-						    x="70" y="300" backgroundAlpha="0">
+						    x="70" y="300" backgroundAlpha="0" >
 	
 	<fx:Script>
 		<![CDATA[
@@ -50,13 +50,15 @@
 		]]>
 	</fx:Script>	
 	
-	<!-- Also uses the MyPopupSkin.mxml class -->
-	<s:SkinnableContainer skinClass="skins.BlueBoxRoundCornersSkin">		
-		<s:Button x="5" y="5" id="upload" label="upload" click="onClick(event)" skinClass="components.MenuUploadButtonSkin"/>
-		<s:Button x="5" y="74" id="browseSets" label="browseSets" click="onClick(event)" skinClass="components.MenuSetsButtonSkin"/>
-		<s:Button x="5" y="143" id="stream" label="stream" click="onClick(event)" skinClass="components.MenuStreamButtonSkin"/>
-		<s:Button x="5" y="212" id="search" label="search" click="onClick(event)" skinClass="components.MenuSearchButtonSkin"/>
-		<s:Button x="159" y="281" label="Close" click="this.close()"/>
+
+	<s:SkinnableContainer width="100%" height="100%" skinClass="skins.BlueMenuBox">	
+		<s:VGroup horizontalAlign="right" paddingLeft="20" paddingRight="20" paddingTop="20" paddingBottom="20">
+			<s:Button id="upload" label="upload" click="onClick(event)" skinClass="components.MenuUploadButtonSkin"/>
+			<s:Button id="browseSets" label="browseSets" click="onClick(event)" skinClass="components.MenuSetsButtonSkin"/>
+			<s:Button id="stream" label="stream" click="onClick(event)" skinClass="components.MenuStreamButtonSkin"/>
+			<s:Button id="search" label="search" click="onClick(event)" skinClass="components.MenuSearchButtonSkin"/>
+			<s:Button click="this.close()" height="50" width="50" icon="@Embed('assets/images/close.png')" />
+		</s:VGroup>
 	</s:SkinnableContainer>
 	
 </s:SkinnablePopUpContainer>
