--- a/src/skins/SetListItemRendererSkin.mxml
+++ b/src/skins/SetListItemRendererSkin.mxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Skin xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		xmlns:s="library://ns.adobe.com/flex/spark">
+		xmlns:s="library://ns.adobe.com/flex/spark"
+		xmlns:styles="styles.*">
 	<!-- host component -->
 	<fx:Metadata>
 		[HostComponent("spark.components.SkinnableContainer")]
@@ -12,7 +13,9 @@
 		<s:State name="normal" />
 	</s:states>
 	
-	<s:Rect top="0" bottom="0" right="0" left="0">
+	<styles:GraphicsLib id="graphicsLib"/>
+	
+	<s:Rect top="0" bottom="0" right="0" left="0" filters="{[graphicsLib.getDropShadowFilterWhite()]}">
 		<s:fill>
 			<s:LinearGradient rotation="90">
 				<s:GradientEntry color="0xffffff"/>
