--- a/src/skins/SpeechBubbleSkin.mxml
+++ b/src/skins/SpeechBubbleSkin.mxml
@@ -21,7 +21,7 @@
 			
 			[Bindable]
 			private var _middlePoint:Number;
-			private var forCompiler:SpeechBubbleSkin;
+			[Bindable]public var forCompiler:SpeechBubbleSkin;
 			
 			private function setMiddlePoint():void{
 				_middlePoint = this.width/2.0;
@@ -30,30 +30,30 @@
 		]]>
 	</fx:Script>
 	
-	<s:Path x="100" y="0" filters="{[graphicLib.getDropShadowFilter()]}"
+	<s:Path x="300" y="0" filters="{[graphicLib.getDropShadowFilter()]}"
 	data = "	M 0 0
 	L 50 50
 	L 0 50
 	L 0 0 ">
 	<s:fill>
 	<s:LinearGradient rotation="90">
-	<s:GradientEntry color="#333333"/>
-	<s:GradientEntry color="#333333"/>
+	<s:GradientEntry color="#3fa9f5"/>
+	<s:GradientEntry color="#3fa9f5"/>
 	</s:LinearGradient>
 	</s:fill>
 	
 	</s:Path>
 	
-	<s:Rect y="45" width="95%" height="100%" radiusX="10" radiusY="10" horizontalCenter="0">
+	<s:Rect y="45" width="100%" height="100%" radiusX="10" radiusY="10" horizontalCenter="0">
 		<s:fill>
 			<s:LinearGradient>
-				<s:GradientEntry color="#333333"/>
-				<s:GradientEntry color="#333333"/>
+				<s:GradientEntry color="#3fa9f5"/>
+				<s:GradientEntry color="#3fa9f5"/>
 			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
 	
-	<s:Group id="contentGroup" top="90" left="34" right="34 " bottom="30" fontSize="16" color="#ffffff"/>
+	<s:Group id="contentGroup" top="90" left="20" right="20 " bottom="20" fontSize="20" color="#ffffff"/>
 	
 	<!-- SkinParts
 	name=contentGroup, type=spark.components.Group, required=false
