--- a/src/views/AboutView.mxml
+++ b/src/views/AboutView.mxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		xmlns:s="library://ns.adobe.com/flex/spark" title="About">
+		xmlns:s="library://ns.adobe.com/flex/spark" xmlns:components="components.*">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
@@ -11,10 +11,14 @@
 		]]>
 	</fx:Script>
 	
+	<s:VGroup width="100%" height="100%" gap="0">
+	<components:BreadCrumbHeader firstText="About This App"/>		
+	
 	<s:VGroup verticalCenter="0" horizontalCenter="0" verticalAlign="middle" horizontalAlign="center" gap="10">
 		<s:Image source="@Embed('assets/images/FastrsforFlickrBigWithIcon.png')"/>
 		<s:Label text="Copyright 2011 Gunnar Karlsson" fontSize="18" color="#ffffff"/>
 		<s:Label text="All rights reserved" fontSize="18" color="#ffffff"/>
 	</s:VGroup>
 	
+	</s:VGroup>
 </s:View>
