--- a/src/views/HomeView.mxml
+++ b/src/views/HomeView.mxml
@@ -54,27 +54,32 @@
 	<!--<s:navigationContent>
 		<s:Button icon="@Embed('assets/images/FastrLP6.png')"/>
 	</s:navigationContent>-->
-	<s:VGroup width="102%">
-	<s:SkinnableContainer width="100%" height="180" skinClass="skins.BlueBox" >
+	<s:VGroup width="102%" gap="0" horizontalAlign="center">
 		
-	<s:HGroup  width="100%">
-		<s:Image source="@Embed('assets/images/FastrHomeWithWhite.png')"/><!--FastrsforFlickrBigWithIcon.png'-->
-	</s:HGroup>
+		<s:SkinnableContainer width="100%" height="180" skinClass="skins.BlueBox" >
+			
+			<s:HGroup  width="100%">
+				<s:Image source="@Embed('assets/images/FastrHomeWithWhite.png')"/><!--FastrsforFlickrBigWithIcon.png'-->
+			</s:HGroup>
+			
+		</s:SkinnableContainer>	
 		
-	</s:SkinnableContainer>	
-	
-	<s:TileGroup requestedColumnCount="2" columnAlign="justifyUsingGap"
-				 horizontalGap="20" verticalGap="20"
-				 paddingLeft="25" paddingRight="25" paddingTop="25" paddingBottom="25">
+		<s:VGroup verticalCenter="0" horizontalCenter="0" verticalAlign="middle" horizontalAlign="center">
+			
+			<s:TileGroup requestedColumnCount="2" columnAlign="justifyUsingGap"
+						 horizontalGap="20" verticalGap="20"
+						 paddingLeft="25" paddingRight="25" paddingTop="25" paddingBottom="25">
+				
+				<s:Button id="upload" skinClass="components.StartUploadingButtonSkin" click="onClick(event)"/>
+				<s:Button id="sets" skinClass="components.BrowseYourSetsButtonSkin" click="onClick(event)"/>
+				<s:Button id="stream" skinClass="components.PhotoStreamButtonSkin" click="onClick(event)"/>
+				<s:Button id="about" skinClass="components.AboutButtonSkin" click="onClick(event)"/>
+				<s:Button id="account" skinClass="components.ChangeAccountButtonSkin" click="onClick(event)"/>
+				<s:Button id="search" skinClass="components.SearchButtonSkin" click="onClick(event)"/>		  
+				
+			</s:TileGroup>
+		</s:VGroup>
 		
-		<s:Button id="upload" skinClass="components.StartUploadingButtonSkin" click="onClick(event)"/>
-		<s:Button id="sets" skinClass="components.BrowseYourSetsButtonSkin" click="onClick(event)"/>
-		<s:Button id="stream" skinClass="components.PhotoStreamButtonSkin" click="onClick(event)"/>
-		<s:Button id="about" skinClass="components.AboutButtonSkin" click="onClick(event)"/>
-		<s:Button id="account" skinClass="components.ChangeAccountButtonSkin" click="onClick(event)"/>
-		<s:Button id="search" skinClass="components.SearchButtonSkin" click="onClick(event)"/>		  
-
-	</s:TileGroup>
 	</s:VGroup>
 </s:View>
 
